--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   moodle:
-    image: jorarmarfin/moodle:tmp1
+    image: jorarmarfin/moodle:4.0.4
     container_name: srv-moodle-apache
     volumes:
       - ./backup:/backup
